--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build-prod": "ng build --prod --baseHref='https://anand10bundela.github.io/angular-assignment/'",
+    "build-prod": "ng build --prod --baseHref='https://anand10bundela.io/angular-assignment/'",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
